fix(ffe-account-selector-react): replace hardcoded spacing with vars
BREAKING CHANGE: This commit is likely to cause small visual regressions caused by slightly altered margin and padding values.

--- a/packages/ffe-account-selector-react/less/account-suggestion.less
+++ b/packages/ffe-account-selector-react/less/account-suggestion.less
@@ -18,16 +18,16 @@
     &__nomatches {
         background: @ffe-white;
         color: @ffe-blue-azure;
-        padding: 16px;
+        padding: @ffe-spacing-sm;
         cursor: default;
     }
 
     &__account {
-        padding: 8px 16px 8px 21px;
+        padding: @ffe-spacing-xs @ffe-spacing-sm @ffe-spacing-xs @ffe-spacing-md;
     }
 
     &__account--multi {
-        padding: 8px 16px 8px 10px;
+        padding: @ffe-spacing-xs @ffe-spacing-sm @ffe-spacing-xs @ffe-spacing-xs;
         overflow: hidden;
     }
 
@@ -35,7 +35,7 @@
         line-height: 1;
         font-size: 15px;
         display: block;
-        padding-bottom: 6px;
+        padding-bottom: @ffe-spacing-2xs;
     }
 
     &__details {
